# foundation_series

./: 1_foundation.py  Example.env  LICENSE  README.md  pyproject.toml
1-foundation/: README.md  main.py
1-foundation/modules/: adapter.py
modules/: adapter.py
