[project]
name = "foundation-series"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.4",
    "langchain-anthropic>=1.0.1",
    "langchain-core>=1.0.3",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.2",
    "python-environ>=0.4.54",
]
